2008-10-11  Alp Toker  <alp@nuanti.com>

Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=20592
        The focus ring is not shown while navigating on some pages

        Fix drawFocusRing() so it doesn't depend on the current graphics
        state, thus matching other platforms which already work this way.

        This patch provides two code paths: one using straight Cairo and
        one specialised for the GTK+ port with a more conventional appearance.

        Also change focusRingColor() to return a null color, allowing the
        focus ring to pick up the style's current color if it isn't overridden
        with CSS.

        * platform/graphics/cairo/GraphicsContextCairo.cpp:
        (WebCore::GraphicsContext::drawFocusRing):
        * platform/gtk/TemporaryLinkStubs.cpp:
        (WebCore::focusRingColor):


Canonical link: https://commits.webkit.org/29765@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37521 268f45cc-cd09-0410-ab3c-d52691b4dbfc